cleanup chatserver